--- a/package.json
+++ b/package.json
@@ -12,7 +12,10 @@
     "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs,.ts,.tsx,.cts,.mts --fix --ignore-path .gitignore"
   },
   "dependencies": {
-    "ant-design-vue": "4.x",
+    "@vueuse/core": "^10.9.0",
+    "@vueuse/shared": "^10.9.0",
+    "element-plus": "^2.7.3",
+    "less": "^4.2.0",
     "pinia": "^2.1.7",
     "vue": "^3.4.21",
     "vue-router": "^4.3.0"
@@ -30,6 +33,8 @@
     "npm-run-all2": "^6.1.2",
     "sass": "^1.77.2",
     "typescript": "~5.4.0",
+    "unplugin-auto-import": "^0.17.6",
+    "unplugin-vue-components": "^0.27.0",
     "vite": "^5.2.8",
     "vue-tsc": "^2.0.11"
   }
