--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,6 +6,11 @@
     },
     {
       "path": "./tsconfig.app.json"
-    }
-  ]
+    },
+  ],
+  // 确保 TSX 文件能够正确解析和编译
+  "compilerOptions": {
+    "jsx": "preserve",
+    "jsxImportSource": "vue"
+  }
 }
