--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
     "element-plus": "^2.7.3",
     "nprogress": "^0.2.0",
     "pinia": "^2.1.7",
+    "pinia-plugin-persistedstate": "^3.2.1",
+    "swiper": "^11.1.4",
     "vue": "^3.4.21",
     "vue-i18n": "^9.13.1",
     "vue-router": "^4.3.0"
